--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ### Example user template template
 ### Example user template
 token.txt
+triumphant_channel.txt
 # IntelliJ project files
 .idea
 *.iml
